Przygotowanie modelu użytkownika, przygotowanie controllera, wystawienie punktu api, uzupełnienie dokumentacji swagger
